--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,217 @@
-.App {
+.container {
+  margin-top: 50px;
+  padding: 0px 48px;
+}
+
+.card {
+  background-color: #f8f9fa;
+  border: 1px solid #dee2e6;
+}
+
+.box {
+  background-color: #f8f9fa;
+  border: 1px solid #dee2e6;
+  padding: 20px;
+  margin-bottom: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@media (min-width: 768px) {
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .card,
+  .box {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-title {
+  font-size: 96px;
+  font-weight: bold;
+  color: #fff;
+  text-align: center;
+  font-family: Satoshi;
+}
+
+.card-text {
+  font-size: 18px;
+  color: #fff;
+  text-align: center;
+  padding: 0px 30px 0 30px;
+  font-family: Satoshi;
+}
+
+.yellow-card {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.16);
+  border-radius: 8px;
+  background-color: #e5aa46;
+  font-family: Satoshi;
+}
+
+
+.green-card {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.16);
+  border-radius: 8px;
+  text-align: center;
+  background-color: #246D38;
+  font-family: Satoshi;
+}
+
+.light-green-card {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.16);
+  border-radius: 8px;
+  text-align: center;
+  background-color: #DCF7ED;
+  font-family: Satoshi;
+}
+
+.light-green-card-title {
+  font-size: 96px;
+  font-weight: bold;
+  color: #19C98A;
+  text-align: center;
+  font-family: Satoshi;
+}
+
+.light-green-card-text {
+  font-size: 18px;
+  color: #19C98A;
+  text-align: center;
+  font-family: Satoshi;
+  padding: 0px 30px 0 30px;
+}
+
+.navbar-brand {
+  line-height: 32px;
+  font-family: Satoshi;
+  font-size: 24px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 38px;
+  box-sizing: border-box;
+  height: 80px;
+}
+
+.bg-container {
+  padding: 0px 10px 0px 50px;
+}
+
+.bread-cum {
+  position: absolute;
+  top: 80px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 8px 0px;
+  gap: 8px;
+  font-size: 16px;
+  color: #000;
+}
+
+.bread-cum-text {
+  position: relative;
+  line-height: 24px;
+}
+
+.breadcrumb-item {
+  display: flex;
+  font-family: Satoshi;
+  justify-content: center;
+  gap: 8px;
+}
+
+.small-card-title {
+  font-size: 12px !important;
+  font-weight: bold;
+  color: #1E1E1E;
+  text-align: left;
+  font-family: Satoshi;
+}
+
+.small-card-text {
+  line-height: 26px;
+  font-size: 26px !important;
+  color: #0e8650;
+  text-align: left;
+  font-family: Satoshi;
+  font-weight: bold;
+}
+
+@media (min-width: 768px) {
+  .small-card {
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.16);
+    border-radius: 8px;
+    background-color: #fff !important;
+    overflow: hidden;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    width: 14.9% !important;
+  }
+}
+
+.small-card {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.16);
+  border-radius: 8px;
+  background-color: #fff !important;
+  overflow: hidden;
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  width: 15.9% !important;
+  height: 90px;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-item-img {
+  margin-right: 15px;
+  font-size: 12px;
+  line-height: 24px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.medium-card-title {
+  font-size: 86px;
+  font-weight: bold;
+  color: #fff;
+  text-align: center;
+  font-family: Satoshi;
+}
+
+.medium-card-text {
+  font-size: 18px;
+  color: #fff;
+  text-align: center;
+  padding: 0px 30px 0 30px;
+  font-family: Satoshi;
+}
+
+
+.small-card-title {
+  font-size: 18px;
+  color: #211515;
+  font-family: Satoshi;
+}
+
+.table-card-bg {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.highcharts-container {
+  border-radius: 10px !important;
+}
+
+.icons5 {
+  width: 24px;
+  position: relative;
+  height: 24px;
 }
