--- a/src/App.css
+++ b/src/App.css
@@ -195,7 +195,7 @@
 
 
 .small-card-title {
-  font-size: 18px;
+  font-size: 18px !important;
   color: #211515;
   font-family: Satoshi;
 }
@@ -203,7 +203,7 @@
 .table-card-bg {
   background-color: #fff;
   border-radius: 10px;
-  padding: 10px;
+  padding: 10px !important; 
 }
 
 .highcharts-container {
