--- a/src/pages/signIn/App.css
+++ b/src/pages/signIn/App.css
@@ -9,3 +9,7 @@
     padding: 12px 16px;
     color: #fff;
 }
+
+.css-1p7owzk-MuiDataGrid-root .MuiDataGrid-container--top [role=row], .css-1p7owzk-MuiDataGrid-root .MuiDataGrid-container--bottom [role=row] {
+    background: #000;
+}
