Add Treament module

--- a/src/components/NonHIVTable/style.css
+++ b/src/components/NonHIVTable/style.css
@@ -38,7 +38,7 @@ th {
 }
 
 .yellow {
-    background-color: #cbb46f !important;
+    background-color: #cfae4a !important;
     text-align: center;
     color: #fff !important;
     font-weight: bold;
