--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .container {
   margin-top: 50px;
   padding: 0px 48px;
@@ -104,7 +105,7 @@
 }
 
 .bg-container {
-  padding: 0px 10px 0px 50px;
+  padding: 0px 10px 0px 0px !important;
 }
 
 .bread-cum {
@@ -142,7 +143,7 @@
 
 .small-card-text {
   line-height: 26px;
-  font-size: 26px !important;
+  font-size: 46px !important;
   color: #0e8650;
   text-align: left;
   font-family: Satoshi;
@@ -179,6 +180,27 @@
   width: 16.2% !important;
   height: 90px;
 }
+
+.small-card {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.16);
+  border-radius: 8px;
+  background: #f0f0ef !important;
+  overflow: hidden;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  width: 100% !important;
+  height: 90px;
+}
+
+.side-card-padding{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 
 .nav-item-img {
   margin-right: 15px;
@@ -314,3 +336,97 @@
 .MuiDataGrid-container--top [role=row]{
   background-color: #333333 !important;
 }
+
+.submenu-toggle{
+  width: 100%;
+  text-align: center;
+  font-weight: 400;
+  font-size: 17px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: #f5ffc9 !important;
+}
+
+.green1
+  {
+    background: #c8d9d2 !important;
+    color: #198754;
+    border: none !important;
+    box-shadow: 0 0.1rem 1.0rem -0.6rem rgb(26 89 10);
+
+}
+
+.green2 {
+  background-color: #e1e9e2 !important;
+  color: #198754;
+  border: none !important;
+  box-shadow: 0 0.1rem 1.0rem -0.6rem rgb(26 89 10);
+
+}
+
+.green3 {
+  background: #a5ae75  !important;
+  color: #198754;
+  border: none !important;
+  box-shadow: 0 0.1rem 1.0rem -0.6rem rgb(26 89 10);
+
+}
+
+.green4{
+  background-color: #c0c5aa !important;
+  color: #198754;
+  border: none !important;
+  box-shadow: 0 0.1rem 1.0rem -0.6rem rgb(26 89 10);
+}
+
+.white-color{
+  color:  #fff !important;
+  font-size: 18px !important;
+  font-family: Satoshi;
+}
+
+.white-color-number{
+  color:  #fff !important;
+  line-height: 26px;
+  font-size: 46px !important;
+  text-align: left;
+  font-family: Satoshi;
+  font-weight: bold;
+}
+
+
+.banner{
+  background: #e9e9e6 !important;
+}
+.banner-text{
+  color: #0c6848 !important;
+}
+.main-card1{
+  background: #479244  !important;
+}
+
+.main-card2{
+  background: #3f763e !important;
+}
+
+
+.main-card3{
+  background: #395c4a !important;
+}
+
+.main-card4{
+  background: #395c4a !important;
+}
+.bg-gold-400{
+  background: #898228;
+}
+.bg-gold-green-400{
+  background: #139b43;
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
